# serializer version: 1
# name: test_catalog_index_html_is_device_list
  '''
  <!DOCTYPE html>
  <title>parch specimens</title>
  <style>figure{display:inline-block;margin:1rem;vertical-align:top}figure>input{position:absolute;width:1px;height:1px;overflow:hidden;clip:rect(0,0,0,0)}figure>label{display:block;cursor:zoom-in}figure>label img{width:16rem;height:auto;vertical-align:top}figure>input:checked+label{cursor:zoom-out}figure>input:checked+label img{width:auto;max-width:100%}footer{margin:2rem 1rem 1rem;font-size:0.85rem}</style>
  <ul>
  <li><a href="supernote-nomad/">supernote-nomad</a></li>
  </ul>
  
  '''
# ---
# name: test_catalog_index_html_lists_both_devices
  '''
  <!DOCTYPE html>
  <title>parch specimens</title>
  <style>figure{display:inline-block;margin:1rem;vertical-align:top}figure>input{position:absolute;width:1px;height:1px;overflow:hidden;clip:rect(0,0,0,0)}figure>label{display:block;cursor:zoom-in}figure>label img{width:16rem;height:auto;vertical-align:top}figure>input:checked+label{cursor:zoom-out}figure>input:checked+label img{width:auto;max-width:100%}footer{margin:2rem 1rem 1rem;font-size:0.85rem}</style>
  <ul>
  <li><a href="supernote-nomad/">supernote-nomad</a></li>
  <li><a href="kindle-scribe/">kindle-scribe</a></li>
  </ul>
  
  '''
# ---
# name: test_projects_dests_and_pages[dests]
  dict({
    'projects-cover': 'cover',
    'projects-index': 'projects-index-2026-01',
    'projects-project-1': 'projects-2026-01',
  })
# ---
# name: test_projects_dests_and_pages[pages]
  dict({
    'projects-cover': 1,
    'projects-index': 2,
    'projects-project-1': 3,
  })
# ---
# name: test_sample_dests_and_pages_for_january[dests]
  dict({
    'annual': 'year-2026',
    'cover': 'cover',
    'daily-jan1': '2026-01-01',
    'habits-jan': 'month-2026-01-habits',
    'meeting-1': 'meeting-2026-01',
    'meetings': 'meetings-index-2026',
    'monthly-jan': 'month-2026-01',
    'notes-jan1': '2026-01-01-notes-1',
    'project-1': 'projects-2026-01',
    'projects': 'projects-index-2026-01',
    'quarterly-q1': 'quarter-2026-Q1',
    'review': 'review-index-2026',
    'review-w01': 'review-2026-W01',
    'tasks': 'tasks-index-2026-Q1',
    'tasks-w01': 'tasks-2026-W01',
    'weekly-w01': 'week-2026-W01',
  })
# ---
# name: test_sample_dests_and_pages_for_january[pages]
  dict({
    'annual': 2,
    'cover': 1,
    'daily-jan1': 45,
    'habits-jan': 43,
    'meeting-1': 13,
    'meetings': 12,
    'monthly-jan': 42,
    'notes-jan1': 46,
    'project-1': 4,
    'projects': 3,
    'quarterly-q1': 41,
    'review': 35,
    'review-w01': 36,
    'tasks': 29,
    'tasks-w01': 30,
    'weekly-w01': 44,
  })
# ---
# name: test_specimen_index_html_is_png_gallery
  '''
  <!DOCTYPE html>
  <title>parch specimens — supernote-nomad</title>
  <style>figure{display:inline-block;margin:1rem;vertical-align:top}figure>input{position:absolute;width:1px;height:1px;overflow:hidden;clip:rect(0,0,0,0)}figure>label{display:block;cursor:zoom-in}figure>label img{width:16rem;height:auto;vertical-align:top}figure>input:checked+label{cursor:zoom-out}figure>input:checked+label img{width:auto;max-width:100%}footer{margin:2rem 1rem 1rem;font-size:0.85rem}</style>
  <p><a href="../">specimens</a></p>
  <nav>
  <ul>
  <li><a href="#year-planner">Year planner</a></li>
  <li><a href="#engineering-notebook">Engineering notebook</a></li>
  <li><a href="#projects-notebook">Projects notebook</a></li>
  <li><a href="#steno-pad">Steno pad</a></li>
  </ul>
  </nav>
  <section id="year-planner">
  <h2>Year planner</h2>
  <figure><input type="checkbox" id="cover"><label for="cover"><img src="cover.png" alt="cover"></label><figcaption>cover</figcaption></figure>
  <figure><input type="checkbox" id="annual"><label for="annual"><img src="annual.png" alt="annual"></label><figcaption>annual</figcaption></figure>
  <figure><input type="checkbox" id="quarterly-q1"><label for="quarterly-q1"><img src="quarterly-q1.png" alt="quarterly-q1"></label><figcaption>quarterly-q1</figcaption></figure>
  <figure><input type="checkbox" id="monthly-jan"><label for="monthly-jan"><img src="monthly-jan.png" alt="monthly-jan"></label><figcaption>monthly-jan</figcaption></figure>
  <figure><input type="checkbox" id="weekly-w01"><label for="weekly-w01"><img src="weekly-w01.png" alt="weekly-w01"></label><figcaption>weekly-w01</figcaption></figure>
  <figure><input type="checkbox" id="daily-jan1"><label for="daily-jan1"><img src="daily-jan1.png" alt="daily-jan1"></label><figcaption>daily-jan1</figcaption></figure>
  <figure><input type="checkbox" id="notes-jan1"><label for="notes-jan1"><img src="notes-jan1.png" alt="notes-jan1"></label><figcaption>notes-jan1</figcaption></figure>
  <figure><input type="checkbox" id="projects"><label for="projects"><img src="projects.png" alt="projects"></label><figcaption>projects</figcaption></figure>
  <figure><input type="checkbox" id="project-1"><label for="project-1"><img src="project-1.png" alt="project-1"></label><figcaption>project-1</figcaption></figure>
  <figure><input type="checkbox" id="habits-jan"><label for="habits-jan"><img src="habits-jan.png" alt="habits-jan"></label><figcaption>habits-jan</figcaption></figure>
  <figure><input type="checkbox" id="review"><label for="review"><img src="review.png" alt="review"></label><figcaption>review</figcaption></figure>
  <figure><input type="checkbox" id="review-w01"><label for="review-w01"><img src="review-w01.png" alt="review-w01"></label><figcaption>review-w01</figcaption></figure>
  <figure><input type="checkbox" id="tasks"><label for="tasks"><img src="tasks.png" alt="tasks"></label><figcaption>tasks</figcaption></figure>
  <figure><input type="checkbox" id="tasks-w01"><label for="tasks-w01"><img src="tasks-w01.png" alt="tasks-w01"></label><figcaption>tasks-w01</figcaption></figure>
  <figure><input type="checkbox" id="meetings"><label for="meetings"><img src="meetings.png" alt="meetings"></label><figcaption>meetings</figcaption></figure>
  <figure><input type="checkbox" id="meeting-1"><label for="meeting-1"><img src="meeting-1.png" alt="meeting-1"></label><figcaption>meeting-1</figcaption></figure>
  </section>
  <section id="engineering-notebook">
  <h2>Engineering notebook</h2>
  <figure><input type="checkbox" id="engineering-cover"><label for="engineering-cover"><img src="engineering-cover.png" alt="engineering-cover"></label><figcaption>engineering-cover</figcaption></figure>
  <figure><input type="checkbox" id="engineering-front"><label for="engineering-front"><img src="engineering-front.png" alt="engineering-front"></label><figcaption>engineering-front</figcaption></figure>
  <figure><input type="checkbox" id="engineering-back"><label for="engineering-back"><img src="engineering-back.png" alt="engineering-back"></label><figcaption>engineering-back</figcaption></figure>
  </section>
  <section id="projects-notebook">
  <h2>Projects notebook</h2>
  <figure><input type="checkbox" id="projects-cover"><label for="projects-cover"><img src="projects-cover.png" alt="projects-cover"></label><figcaption>projects-cover</figcaption></figure>
  <figure><input type="checkbox" id="projects-index"><label for="projects-index"><img src="projects-index.png" alt="projects-index"></label><figcaption>projects-index</figcaption></figure>
  <figure><input type="checkbox" id="projects-project-1"><label for="projects-project-1"><img src="projects-project-1.png" alt="projects-project-1"></label><figcaption>projects-project-1</figcaption></figure>
  </section>
  <section id="steno-pad">
  <h2>Steno pad</h2>
  <figure><input type="checkbox" id="steno"><label for="steno"><img src="steno.png" alt="steno"></label><figcaption>steno</figcaption></figure>
  </section>
  
  '''
# ---
# name: test_specimen_index_html_section_anchors
  '''
  <!DOCTYPE html>
  <title>parch specimens — kindle-scribe</title>
  <style>figure{display:inline-block;margin:1rem;vertical-align:top}figure>input{position:absolute;width:1px;height:1px;overflow:hidden;clip:rect(0,0,0,0)}figure>label{display:block;cursor:zoom-in}figure>label img{width:16rem;height:auto;vertical-align:top}figure>input:checked+label{cursor:zoom-out}figure>input:checked+label img{width:auto;max-width:100%}footer{margin:2rem 1rem 1rem;font-size:0.85rem}</style>
  <p><a href="../">specimens</a></p>
  <nav>
  <ul>
  <li><a href="#year-planner">Year planner</a></li>
  <li><a href="#engineering-notebook">Engineering notebook</a></li>
  <li><a href="#projects-notebook">Projects notebook</a></li>
  <li><a href="#steno-pad">Steno pad</a></li>
  </ul>
  </nav>
  <section id="year-planner">
  <h2>Year planner</h2>
  <figure><input type="checkbox" id="cover"><label for="cover"><img src="cover.png" alt="cover"></label><figcaption>cover</figcaption></figure>
  <figure><input type="checkbox" id="annual"><label for="annual"><img src="annual.png" alt="annual"></label><figcaption>annual</figcaption></figure>
  <figure><input type="checkbox" id="quarterly-q1"><label for="quarterly-q1"><img src="quarterly-q1.png" alt="quarterly-q1"></label><figcaption>quarterly-q1</figcaption></figure>
  <figure><input type="checkbox" id="monthly-jan"><label for="monthly-jan"><img src="monthly-jan.png" alt="monthly-jan"></label><figcaption>monthly-jan</figcaption></figure>
  <figure><input type="checkbox" id="weekly-w01"><label for="weekly-w01"><img src="weekly-w01.png" alt="weekly-w01"></label><figcaption>weekly-w01</figcaption></figure>
  <figure><input type="checkbox" id="daily-jan1"><label for="daily-jan1"><img src="daily-jan1.png" alt="daily-jan1"></label><figcaption>daily-jan1</figcaption></figure>
  <figure><input type="checkbox" id="notes-jan1"><label for="notes-jan1"><img src="notes-jan1.png" alt="notes-jan1"></label><figcaption>notes-jan1</figcaption></figure>
  <figure><input type="checkbox" id="projects"><label for="projects"><img src="projects.png" alt="projects"></label><figcaption>projects</figcaption></figure>
  <figure><input type="checkbox" id="project-1"><label for="project-1"><img src="project-1.png" alt="project-1"></label><figcaption>project-1</figcaption></figure>
  <figure><input type="checkbox" id="habits-jan"><label for="habits-jan"><img src="habits-jan.png" alt="habits-jan"></label><figcaption>habits-jan</figcaption></figure>
  <figure><input type="checkbox" id="review"><label for="review"><img src="review.png" alt="review"></label><figcaption>review</figcaption></figure>
  <figure><input type="checkbox" id="review-w01"><label for="review-w01"><img src="review-w01.png" alt="review-w01"></label><figcaption>review-w01</figcaption></figure>
  <figure><input type="checkbox" id="tasks"><label for="tasks"><img src="tasks.png" alt="tasks"></label><figcaption>tasks</figcaption></figure>
  <figure><input type="checkbox" id="tasks-w01"><label for="tasks-w01"><img src="tasks-w01.png" alt="tasks-w01"></label><figcaption>tasks-w01</figcaption></figure>
  <figure><input type="checkbox" id="meetings"><label for="meetings"><img src="meetings.png" alt="meetings"></label><figcaption>meetings</figcaption></figure>
  <figure><input type="checkbox" id="meeting-1"><label for="meeting-1"><img src="meeting-1.png" alt="meeting-1"></label><figcaption>meeting-1</figcaption></figure>
  </section>
  <section id="engineering-notebook">
  <h2>Engineering notebook</h2>
  <figure><input type="checkbox" id="engineering-cover"><label for="engineering-cover"><img src="engineering-cover.png" alt="engineering-cover"></label><figcaption>engineering-cover</figcaption></figure>
  <figure><input type="checkbox" id="engineering-front"><label for="engineering-front"><img src="engineering-front.png" alt="engineering-front"></label><figcaption>engineering-front</figcaption></figure>
  <figure><input type="checkbox" id="engineering-back"><label for="engineering-back"><img src="engineering-back.png" alt="engineering-back"></label><figcaption>engineering-back</figcaption></figure>
  </section>
  <section id="projects-notebook">
  <h2>Projects notebook</h2>
  <figure><input type="checkbox" id="projects-cover"><label for="projects-cover"><img src="projects-cover.png" alt="projects-cover"></label><figcaption>projects-cover</figcaption></figure>
  <figure><input type="checkbox" id="projects-index"><label for="projects-index"><img src="projects-index.png" alt="projects-index"></label><figcaption>projects-index</figcaption></figure>
  <figure><input type="checkbox" id="projects-project-1"><label for="projects-project-1"><img src="projects-project-1.png" alt="projects-project-1"></label><figcaption>projects-project-1</figcaption></figure>
  </section>
  <section id="steno-pad">
  <h2>Steno pad</h2>
  <figure><input type="checkbox" id="steno"><label for="steno"><img src="steno.png" alt="steno"></label><figcaption>steno</figcaption></figure>
  </section>
  
  '''
# ---
# name: test_steno_dests_and_pages[dests]
  dict({
    'steno': 'steno-2026-01',
  })
# ---
# name: test_steno_dests_and_pages[pages]
  dict({
    'steno': 1,
  })
# ---
